test/regress/ext:gc/br_on_null0.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8f\80\80\80\00\03\60"
    "\00\00\60\01\63\00\01\70\60\01\70\01\70\03\83\80"
    "\80\80\00\02\01\02\0a\9a\80\80\80\00\02\84\80\80"
    "\80\00\00\20\00\0b\8b\80\80\80\00\00\d0\00\20\00"
    "\d5\00\1a\10\00\0b"
  )
  "type mismatch"
)
